<resources>
    <string name="app_name">Splitit</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="terms"><u>Terms</u></string>
    <string name="contact_us"><u>Contact Us</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="splitit">SPLITIT</string>
    <string name="welcome_back_to_splitit">Welcome Back to Splitit</string>
    <string name="forgot_password">Forgot your Password ?</string>
    <string name="back">Back</string>
    <string name="by_signing_up_you_accept_thje_aplitwise_terms_of_services"><u>By signing up ,you accept the splitit Terms \n<u>of services</u> </u></string>
    <string name="of_services"><u>of services</u></string>
    <string name="your_email_address">Your Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone </string>
    <string name="done">Done</string>
    <string name="your_password">Your password</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_name">Please Enter Full Name</string>
    <string name="enter_email_valid">Please Enter Valid Email</string>
    <string name="please_enter_password">Please Enter Your Password</string>
    <string name="pass_six_greater">Password must be greater 6 character</string>
    <string name="phn_ten_greater">Phone number must be greater 10 character</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="activity">Activity</string>
    <string name="account">Account</string>
    <string name="add_expense">Add Expense</string>
    <string name="expense">Expense</string>
    <string name="you_are_all_settled_up">You are all settled up</string>
    <string name="no_group_to_show">No Group to Show</string>
    <string name="add_more_friends">Add more friends</string>
    <string name="welcome_to_splitit_hitesh">Welcome to Splitit, Hitesh</string>
    <string name="start_a_new_group">Start a new group</string>
    <string name="scan">Scan</string>
    <string name="splitit_pro">Splitit Pro</string>
    <string name="email_settings">Email Settings</string>
    <string name="device_and_push_notification_settings">Device and push notification \n settings</string>
    <string name="preferences">Preferences</string>
    <string name="rate_splitit">Rate Splitit</string>
    <string name="contact_splitit_support">Contact Splitit support</string>
    <string name="log_out">Log out</string>
    <string name="user_name">User Name</string>
    <string name="username_gmail_com">userName@gmail.com</string>
    <string name="passcode">Passcode</string>
    <string name="feedback">FeedBack</string>
    <string name="you_created_the_group_raah">You created the group \"Raah\"</string>
    <string name="yesterday_6_31">Yesterday, 6:31 pm </string>
    <string name="you_get_back_inr_100_00">You get Back INR 100.00</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="no_expenses">no expenses</string>
    <string name="all_groups">All groups</string>
    <string name="outstanding_balances">Outstanding balances</string>
    <string name="groups_you_owe">Groups you owe</string>
    <string name="groups_that_owe_you">Groups that owe you</string>
    <string name="create_a_group">Create a Group</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="type">Type</string>
    <string name="add_members">Add people to group</string>
    <string name="invite_members">Invite people to group</string>
    <string name="group_members">Group members</string>
    <string name="search_hint">Search all contacts</string>
</resources>