<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ImageView
            android:id="@+id/icnImg"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_marginTop="@dimen/_125sdp"
            android:elevation="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/headTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/splitit"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintEnd_toEndOf="@id/icnImg"
            app:layout_constraintStart_toStartOf="@id/icnImg"
            app:layout_constraintTop_toBottomOf="@id/icnImg" />

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@color/appYellow"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@id/logInBtn" />

        <TextView
            android:id="@+id/logInBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@id/googleSignInBtn" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/googleSignInBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@color/white"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/termPolicyView">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
               android:layout_marginEnd="@dimen/_2sdp"
                android:src="@drawable/icn_google"
                app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toStartOf="@id/googleSignInTxt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/googleSignInTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/_5sdp"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/termPolicyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_2sdp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/termTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_5sdp"
                android:text="@string/terms"
                android:textColor="@color/_C4C4C4"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/_C4C4C4"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_7sdp"/>

            <TextView
                android:id="@+id/privacyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_5sdp"
                android:text="@string/privacy_policy"
                android:textColor="@color/_C4C4C4"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/_C4C4C4"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_7sdp"/>

            <TextView
                android:id="@+id/ContactUsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_5sdp"
                android:text="@string/contact_us"
                android:textColor="@color/_C4C4C4"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>