<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/custom_header">
    </include>

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome_back_to_splitit"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerView" />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email_address"
        android:textColor="@color/appTextColor"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTxt" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:fontFamily="@font/poppins_medium"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/emailTxt"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="@color/appTextColor"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="@+id/emailTxt"
        app:layout_constraintTop_toBottomOf="@+id/email_editText" />


        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:fontFamily="@font/poppins_medium"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintEnd_toEndOf="@+id/email_editText"
            app:layout_constraintStart_toStartOf="@+id/email_editText"
            app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
            tools:ignore="TextFields" />

        <ImageView
            android:id="@+id/show_pass_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_password_hide"
            app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@id/passwordEditText"
            app:layout_constraintTop_toTopOf="@id/passwordEditText"
            android:layout_marginBottom="@dimen/_5sdp"
            app:tint="@color/appYellow" />


    <TextView
        android:id="@+id/logInBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:background="@color/appYellow"
        android:layout_marginStart="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_100sdp"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    <TextView
        android:id="@+id/headTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:elevation="@dimen/_2sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/appYellow"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@id/logInBtn"
        app:layout_constraintStart_toStartOf="@id/logInBtn"
        app:layout_constraintTop_toBottomOf="@id/logInBtn" />





</androidx.constraintlayout.widget.ConstraintLayout>
</layout>